FORUM COMMENTS alignment issue fixed

--- a/docroot/sites/all/themes/ambitious/sass/layouts/global.scss
+++ b/docroot/sites/all/themes/ambitious/sass/layouts/global.scss
@@ -219,7 +219,7 @@ div#admin-toolbar.vertical div.admin-tab{
 			  }
 			}
 			.comment-right{
-				@include span(6 of 8 last);
+			//	@include span(6 of 8 last);
                 border:2px solid $border-color;
                 //padding:16px 26px 13px 26px;
                 //margin:0 0 27px 112px;
