--- a/docroot/sites/all/themes/ambitious/sass/layouts/topic-forum.scss
+++ b/docroot/sites/all/themes/ambitious/sass/layouts/topic-forum.scss
@@ -2153,7 +2153,7 @@ fieldset{
 			  &:before{
 			    content: "";
 			    position: absolute;
-			    left: 110px;
+			    left: -24px;
 			    background:url(../../images/sprite.png) no-repeat -1px -162px;
 			    width: 24px;
 				top: 15px;
